# plm_sandbox

./: README.md  pyproject.toml
notebooks/: 01_mlm_pfama.ipynb
src/: 01_mlm_pfama.py  base_plm.py  tokenizer.py
src/structure_tools/: pdb_parser.py  pocket.py
tests/: test_pocket.py
tests/data/pdb/: pocket_test.ent
