[project]
name = "plm-sandbox"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "torch",
    "numpy",
    "scipy",
    "matplotlib",
    "biopython",
    "jupyterlab",
]

[tool.ruff]
line-length = 90

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[dependency-groups]
dev = [
    "pre-commit>=4.6.0",
    "ruff>=0.15.15",
    "pytest",
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/"]